--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ title {
     text-align: center;
     letter-spacing: 1px;
     color: #ffffff;
-    background-color: #5F9EA0
+    background-color: #5F9EA0;
 }
